# open_rewrite

./: .gitignore  README.md  main.py  main.spec  open-rewrite-windows-x64.spec  pyproject.toml  requirements.txt  settings.json
.github/workflows/: pyinstaller.yml
src/: __init__.py  app.py  updater.py
src/apis/: settings_api.py  webview_api.py
src/llm/: openai_manager.py
src/managers/: rewrite_manager.py  settings_manager.py
src/managers/llm/: openai_manager.py
src/rewrite/: rewrite_manager.py
src/settings/: settings_manager.py
src/ui/: app.html  index.html  settings.html
src/ui/static/: app.js  main.css  settings.js  styles.css
src/ui/static/app/: app.js  markdown.css
src/ui/static/settings/: generalSettingsManager.js  iconSelector.js  settings.js  settingsManager.js  toneFormatManager.js
src/utils/: clipboard_handler.py  global_hotkey.py  resource_path.py
src/web/: index.html
src/web/static/: app.js
src/web/static/css/: styles.css
src/web/static/js/: app.js
src/web/templates/: index.html
ui-src/: package-lock.json  package.json  vite.config.js
